src/test/deca/syntax/valid/created/class_syntax9.deca
class A{
	B methA(A a){
		return (B)a;
	}
}

class B extends A{
	B methA(A a){
		return new B();
	}
}

{}
