src/test/deca/syntax/invalid/created/faux32.deca
class B{
	bool methA(){
		return 2;
	}
}

{}
